UPD: updated code in live class

--- a/src/pages/counter/CounterPage.css
+++ b/src/pages/counter/CounterPage.css
@@ -1,6 +1,6 @@
 :root {
     --color-negative: #ff1744;
-    --color-positive: #0000FF;
+    --color-positive: green;
     --color-gray100: #f0f7f8;
     --color-gray200: #cfd8dc;
     --color-gray300: #a7b7be;
